--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <div class="carousel">
       <div class="card box">
         <img src="" alt="">
+        <div class="text">Tony</div>
       </div>
     </div>
   </div>
